--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-	"manifest_version": 2,
+  "manifest_version": 2,
 
-	"name": "Grid overlay",
-	"description": "Overlays the Guardian's grid.",
-	"version": "1.0",
-	"icons": {
-		"90": "icon.png"
-	},
-	"permissions": ["<all_urls>"],
-	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
-	},
-	"browser_action": {}
+  "name": "Grid overlay",
+  "description": "Overlays the Guardian's grid.",
+  "version": "1.0",
+  "icons": {
+    "90": "icon.png"
+  },
+  "permissions": ["activeTab"],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "browser_action": {}
 }
